pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/metadata
dist_pkgdata_SCRIPTS = \
	md.cfg \
	md.kshlib \
	setup.ksh \
	cleanup.ksh \
	md_001_pos.ksh \
	md_002_neg.ksh \
	md_003_pos.ksh \
	md_004_neg.ksh \
	md_005_pos.ksh \
	md_006_pos.ksh \
	md_007_pos.ksh \
	md_008_neg.ksh \
	md_009_neg.ksh \
	md_010_pos.ksh \
	md_011_pos.ksh \
	md_012_pos.ksh \
	md_013_pos.ksh \
	md_014_neg.ksh \
	md_015_pos.ksh

